
Features / Enhancements:

GUI:
	Libs:
		- Updated Zend Framework to 1.11.12
		- Updated Net_DNS to Net_DNS2


Tickets:
	- Fixed #453: Wrong Support Ticket System Mailer template
	- Fixed #458: Switch to Net_DNS2
	- Fixed #475: Some field-lengths are too short for their content
	- Fixed #479: WARNING 00_master_ssl.conf do not exists

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-beta1
-------------------------------------------------------------------------------------
2012-07-01: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-beta1

Features / Enhancements:

GUI:
	Tools:
		- Updated PhpMyAdmin to version 3.5.2
		- Updated AjaxPlorer to 4.2.2
		- Updated Roundcube to 0.7.2


Tickets:
	- Fixed #17: Feature - Send mail if quota reached
	- Fixed #157: Enhancement - Relaying Domains
	- Fixed #163: Enhancement - Add Support for Roundcube Mail (or switch from Squirrel)
	- Fixed #213: Enhancement - Bruteforce component - login attemps
	- Fixed #313: Enhancement - Some improvements on postfix's master.cf
	- Fixed #322: Enhancement - Add possibility to delete more then only one eMail Adress
	- Fixed #337: Enhancement - Add possibility to edit per user mail quotas
	- Fixed #368: Enhancement - Add custom TXT DNS resource records
	- Fixed #387: Enhancement - php.ini modifications to allow the usage of roundcube
	- Fixed #429: Enhancement - TXT entries should allow * as a valid character
	- Fixed #402: Task - Ajaxplorer - Not Compatible with php 5.4
	- Fixed #403: Defect - Hosting Plan Secure Code doesn't work
	- Fixed #404: Defect - Missing translations
	- Fixed #405: Bug - Custom message for maintenance mode is always overridden
	- Fixed #408: Defect: warning: master.cf: unused parameter: smtpd_override_options=no_address_mappings
	- Fixed #413: Defect: dovecot quota config inconsistent
	- Fixed #415: Defect - mailbox catchall catching everything.. not what it should..
	- Fixed #421: Defect: Adding email account not IDN compatible